# monorepo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.ini  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  markdown-code-runner.yml  release.yml
docs/: contributing.md  getting-started.md  index.md  usage.md
mono-core/: README.md  pyproject.toml
mono-core/src/mono_core/: __init__.py  database.py  greetings.py
mono-core/src/mono_core/tests/: test_database.py
mono-one/: README.md  pyproject.toml
mono-one/src/mono_one/: __init__.py  conf.py  greetings.py
mono-one/src/mono_one/tests/: test_conf.py  test_greetings.py
mono-two/: README.md  pyproject.toml
mono-two/src/mono_two/: __init__.py  greetings.py
src/: config.ini
src/mono/: __init__.py  cli.py  conf.py
src/mono/core/: __init__.py
src/mono/one/: __init__.py  greetings.py
src/mono/two/: __init__.py
tests/: conftest.py  test_cli.py  test_conf.py  test_core.py  test_mono.py  test_one.py  test_two.py
